folio-eureka-pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: folio-eureka-pod
spec:
  containers:
  - image: ghcr.io/sul-dlss/folio-eureka:main
    name: folio-eureka-pod
    imagePullPolicy: Always
    # Just spin & wait forever
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 60; done;" ]
    resources:
      limits:
        cpu: 128m
        memory: 512Mi
      requests:
        cpu: 50m
        memory: 400Mi
  restartPolicy: Never
