ingress2gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  creationTimestamp: null
  name: nginx
  namespace: folio-dev
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: kong-folio-dev.stanford.edu
    name: kong-folio-dev-stanford-edu-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  creationTimestamp: null
  name: kong-kong-folio-dev-stanford-edu
  namespace: folio-dev
spec:
  hostnames:
  - kong-folio-dev.stanford.edu
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: kong
      port: 8443
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
